<resources>
    <string name="app_name">DiaryApp</string>
    <string name="description">Description</string>
    <string name="task_name">Task name</string>
    <string name="choose_date">Choose date</string>
    <string name="add_task">Add task</string>
    <string name="date_and_time">Date and time</string>
    <string name="_0">0</string>
    <string name="navigate_to_add_fragment">navigate_to_add_fragment</string>
    <string name="task1">task1</string>
    <string name="icon_check_list">icon_check_list</string>
    <string name="math">Math</string>
    <string name="small_clocks">small clocks</string>
    <string name="_14_00">14:00</string>
    <string name="_15_00">15:00</string>
</resources>
