<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addTaskLayout"
    tools:context=".views.fragments.add_task_fragment.AddTaskFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="290dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/task_name"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@id/input_layout_name"
            app:layout_constraintStart_toStartOf="@id/input_layout_name"
            app:layout_constraintTop_toBottomOf="@id/input_layout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_set_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/choose_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black_transparency"
            app:layout_constraintBottom_toTopOf="@+id/save_task"
            app:layout_constraintEnd_toEndOf="@id/input_layout_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/input_layout_name"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_description"
            app:layout_constraintVertical_bias="0.243" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_calendar"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:clickable="true"
            android:src="@drawable/ic_calendar"
            app:layout_constraintBottom_toBottomOf="@id/tv_set_date"
            app:layout_constraintEnd_toEndOf="@id/tv_set_date"
            app:layout_constraintTop_toTopOf="@id/tv_set_date" />

        <Button
            android:id="@+id/save_task"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/color1"
            android:text="@string/add_task"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
