<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.task_list_fragment.TaskListFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_set_date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:gravity="center_vertical"
        android:text="@string/choose_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black_transparency"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@id/tv_set_date"
        app:layout_constraintEnd_toEndOf="@id/tv_set_date"
        app:layout_constraintTop_toTopOf="@id/tv_set_date"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/day"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center_horizontal"
        android:text="@string/_0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_calendar"
        app:layout_constraintEnd_toEndOf="@+id/tv_set_date"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/img_calendar"
        app:layout_constraintTop_toTopOf="@+id/img_calendar"
        app:layout_constraintVertical_bias="0.68" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_set_date"
        tools:listitem="@layout/one_hour_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/navigate_to_add_fragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/color2"
        android:clickable="true"
        android:contentDescription="@string/navigate_to_add_fragment"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_pen" />

</androidx.constraintlayout.widget.ConstraintLayout>
